apps/next/headless/patch.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headless
spec:
  template:
    spec:
      containers:
        - name: headless
          image: ghcr.io/harrytang/headless:main-e6262cb-1785361781 # {"$imagepolicy": "harrytang-staging:headless"}
