apps/next/headless/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headless-http
spec:
  hostnames:
    - headless-next.harrytang.xyz
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headless-https
spec:
  hostnames:
    - headless-next.harrytang.xyz
