apps/next/headless/patch.http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headless-http
spec:
  hostnames:
    - headless-next.harrytang.xyz
